--- a/solitaire/solitaire_cli/Cargo.toml
+++ b/solitaire/solitaire_cli/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-boards = { path = "../boards" }
+boards = { path = "../../boards" }
 solitaire_backend = { path = "../solitaire_backend" }
 regex = "1"
 lazy_static = "1.4.0"
