--- a/solitaire/solitaire_grpc/Cargo.toml
+++ b/solitaire/solitaire_grpc/Cargo.toml
@@ -10,6 +10,7 @@ boards = { path = "../../boards" }
 solitaire_backend = { path = "../solitaire_backend" }
 tonic = "0.7.2"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tokio-stream = "0.1.6"
 prost = "0.10.1"
 futures-core = "0.3.21"
 uuid = { version = "0.5.1", features = ["v4"] }
