splitting proto from server

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ members = [
     "solitaire/solitaire_backend",
     "solitaire/solitaire_cli",
     "solitaire/solitaire_grpc",
+    "solitaire/solitaire_grpc_server",
 ]
