--- a/solitaire/solitaire_cli/Cargo.toml
+++ b/solitaire/solitaire_cli/Cargo.toml
@@ -8,5 +8,8 @@ edition = "2021"
 [dependencies]
 boards = { path = "../../boards" }
 solitaire_backend = { path = "../solitaire_backend" }
-regex = "1"
-lazy_static = "1"
+solitaire_grpc = { path = "../solitaire_grpc" }
+tonic = "0.7.2"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+prost = "0.10.1"
+async-trait = "0"
